error_templates/java/test_files/method_not_found_error/test.txt
template: "Java.MethodNotFoundError"
---
Test.java:4: error: cannot find symbol
        displayArray(numbers);
        ^
    symbol:   method displayArray(int[])
    location: class Test
1 error
===
